--- a/REMASTER NOW WITH 100% MORE DLC FOR ELAJJAZ/DarkSoulsIIIRandomWeaponMod/DarkSoulsIIIRandomWeaponMod.csproj
+++ b/REMASTER NOW WITH 100% MORE DLC FOR ELAJJAZ/DarkSoulsIIIRandomWeaponMod/DarkSoulsIIIRandomWeaponMod.csproj
@@ -100,7 +100,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Weapons_list.cs" />
-    <Compile Include="whoevenuseswpflul.cs" />
+    <Compile Include="Whoevenuseswpflul.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
